# DSLR

./: .gitignore  Makefile  PR.md  README.md  pyproject.toml  requirements.txt
doc/: describe.md  predict.md  train.md  visualizations.md
model/: model.json
src/: arg_parser.py  confusion_matrix.py  describe.py  histogram.py  logreg_evaluate.py  logreg_predict.py  logreg_train.py  pair_plot.py  predict.py  scatter_plot.py  train.py  utils.py
