[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dslr"
version = "0.1.0"
description = "42 DSLR logistic regression project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.1.1",
    "matplotlib==3.10",
    "Pillow==10.0.0",
    "scikit-learn==1.5.2",
    "pandas==2.3",
]

[project.scripts]
describe = "describe:main"
histogram = "histogram:main"
train = "logreg_train:main"
predict = "logreg_predict:main"
evaluate = "logreg_evaluate:main"
confusion = "confusion_matrix:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "arg_parser",
    "confusion_matrix",
    "describe",
    "histogram",
    "logreg_evaluate",
    "logreg_predict",
    "logreg_train",
    "utils",
]