[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dslr"
version = "0.1.0"
description = "42 DSLR logistic regression project"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "numpy==2.1.1",
    "matplotlib==3.10",
    "Pillow==10.0.0",
    "pandas==2.3",
]

[project.scripts]
describe = "describe:main"
histogram = "histogram:main"
scatter_plot = "scatter_plot:main"
pair_plot = "pair_plot:main"
train = "logreg_train:main"
predict = "logreg_predict:main"
confusion = "confusion_matrix:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "arg_parser",
    "confusion_matrix",
    "describe",
    "histogram",
    "logreg_predict",
    "logreg_train",
    "pair_plot",
    "scatter_plot",
    "utils",
]
